fixed modal overlay not covering control panel

--- a/src/styles/components/Modal.scss
+++ b/src/styles/components/Modal.scss
@@ -7,6 +7,7 @@
   height: 100%;
   background-color: black;
   opacity: 75%;
+  z-index: theme.$z_modal-overlay;
 }
 
 .modal {
